# seis615-final

./: Dockerfile  buildspec.yml  dynacorp-api-pipeline.yaml
app/: Pipfile  export-requirements.sh  main.py  message.py  pyproject.toml  requirements.txt
